Import data to sql

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PhoneZoneDBContext": "Server=(localdb)\\mssqllocaldb;Database=phonezone_backend.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true" //sua server theo may
+    "PhoneZoneDBContext": "Server=HIEUMT-2491310\\HIEUMT;Database=phonezone_backend;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   }
 }
