--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "RZgAR3Nkx1HBN3ZYJtYSvlNt1C58zSn4"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
