--- a/appsettings.json
+++ b/appsettings.json
@@ -16,7 +16,11 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "http://localhost:5173/cart"
+    "PaymentBackReturnUrl": "http://localhost:3000/cart"
   },
-  "TimeZoneId": "SE Asia Standard Time"
+  "TimeZoneId": "SE Asia Standard Time",
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PhoneZoneDBContext": "Server=HIEUMT-2491310\\HIEUMT;Database=phonezone_backend;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  }
 }
