--- a/appsettings.json
+++ b/appsettings.json
@@ -21,6 +21,6 @@
   "TimeZoneId": "SE Asia Standard Time",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PhoneZoneDBContext": "Server=HIEUMT-2491310\\HIEUMT;Database=phonezone_backend;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "PhoneZoneDBContext": "Server=LAPTOP-JKEK5282\\SQLEXPRESS;Database=phonezone_backend;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   }
 }
